[gd_scene load_steps=41 format=3 uid="uid://b63m01jpnmedq"]

[ext_resource type="Script" path="res://Scripts/planta_rodadora.gd" id="1_oa2wf"]
[ext_resource type="Texture2D" uid="uid://dicd0bewu0cyp" path="res://assets/Charhing bar.png" id="2_7o56a"]
[ext_resource type="Texture2D" uid="uid://cxfdlymugi3r4" path="res://assets/Pistola 50 x 50.png" id="2_187sa"]
[ext_resource type="Texture2D" uid="uid://gdkymkdyd7bv" path="res://assets/humito.png" id="3_b77o7"]
[ext_resource type="PackedScene" uid="uid://rekox6wbq7fg" path="res://scenes/mecanics/atack_area.tscn" id="3_flaww"]
[ext_resource type="Texture2D" uid="uid://exqgvm775cfh" path="res://assets/Planta pistolera 50 x 50.png" id="3_i4vt2"]
[ext_resource type="Texture2D" uid="uid://cqmcn3k0tavx4" path="res://assets/planta pistolera (start + shooting).png" id="4_2bkxt"]
[ext_resource type="AudioStream" uid="uid://dgobdtreehslb" path="res://assets/Sounds .wav/Shooting sound.mp3" id="6_nuyt8"]

[sub_resource type="Curve" id="Curve_dpit1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.854749, 0), 0.307349, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_pdu5a"]
curve = SubResource("Curve_dpit1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wjf8d"]
particle_flag_disable_z = true
inherit_velocity_ratio = 0.175
spread = 163.834
initial_velocity_min = 116.9
initial_velocity_max = 165.45
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.6
scale_curve = SubResource("CurveTexture_pdu5a")
color = Color(0.997587, 0.968756, 0.888482, 1)

[sub_resource type="Gradient" id="Gradient_54xco"]
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wjfop"]
gradient = SubResource("Gradient_54xco")
use_hdr = true

[sub_resource type="Curve" id="Curve_fflpd"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.826667, 0.208791), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_xq3x3"]
curve = SubResource("Curve_fflpd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yxe1o"]
particle_flag_disable_z = true
angle_min = -647.2
angle_max = -48.5
inherit_velocity_ratio = 0.303
spread = 45.001
initial_velocity_min = 10.0
initial_velocity_max = 30.0
gravity = Vector3(0, -98, 0)
tangential_accel_max = 15.73
scale_min = 0.3
scale_max = 0.4
scale_curve = SubResource("CurveTexture_xq3x3")
scale_over_velocity_max = 67.42
color = Color(0.643137, 0.643137, 0.643137, 1)
color_ramp = SubResource("GradientTexture1D_wjfop")
anim_speed_min = 0.5
anim_speed_max = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bs6le"]
atlas = ExtResource("3_i4vt2")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7tpt"]
atlas = ExtResource("3_i4vt2")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7s56"]
atlas = ExtResource("3_i4vt2")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkfm2"]
atlas = ExtResource("3_i4vt2")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy3de"]
atlas = ExtResource("4_2bkxt")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxcx3"]
atlas = ExtResource("4_2bkxt")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdnvk"]
atlas = ExtResource("4_2bkxt")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nqfs"]
atlas = ExtResource("4_2bkxt")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0kxp"]
atlas = ExtResource("4_2bkxt")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_726dd"]
atlas = ExtResource("4_2bkxt")
region = Rect2(250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_nst04"]
atlas = ExtResource("4_2bkxt")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6yh0"]
atlas = ExtResource("4_2bkxt")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r8w5"]
atlas = ExtResource("4_2bkxt")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gen3"]
atlas = ExtResource("4_2bkxt")
region = Rect2(150, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw8ok"]
atlas = ExtResource("4_2bkxt")
region = Rect2(200, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_r17m5"]
atlas = ExtResource("4_2bkxt")
region = Rect2(250, 50, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_u44gp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs6le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7tpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7s56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkfm2")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy3de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxcx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdnvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nqfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0kxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_726dd")
}],
"loop": true,
"name": &"shooting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nst04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6yh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r8w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gen3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw8ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r17m5")
}],
"loop": true,
"name": &"start",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gntk4"]
radius = 29.0

[sub_resource type="Animation" id="Animation_6kpvs"]
resource_name = "IDLE"
length = 0.40001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.100642, 0.200143, 0.301278),
"transitions": PackedFloat32Array(19.6982, 16.5642, 11.7126, 11.7127),
"update": 0,
"values": [0.0, 0.141372, 0.235619, 0.158825]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../planta:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../planta:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../planta:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}

[sub_resource type="Animation" id="Animation_g1yv3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../planta:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../planta:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../planta:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_tv05w"]
resource_name = "shooting"
length = 0.6
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../planta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0968457, 0.2, 0.60001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.000102158, -0.546288, 0.000102126]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../planta:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"shooting"]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/GPUParticles2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.12),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}

[sub_resource type="Animation" id="Animation_h3l2x"]
resource_name = "start"
length = 1.00001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gixn"]
_data = {
"IDLE": SubResource("Animation_6kpvs"),
"RESET": SubResource("Animation_g1yv3"),
"shooting": SubResource("Animation_tv05w"),
"start": SubResource("Animation_h3l2x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bfsd"]
size = Vector2(625.006, 20)

[node name="Planta Rodadora" type="Area2D"]
scale = Vector2(0.921591, 0.921591)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_oa2wf")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 17.3613)
emitting = false
amount = 11
process_material = SubResource("ParticleProcessMaterial_wjf8d")
texture = ExtResource("2_7o56a")
lifetime = 0.4
one_shot = true
explosiveness = 1.0

[node name="sprite" type="Node2D" parent="."]

[node name="pistola" type="Sprite2D" parent="sprite"]
position = Vector2(18.4464, 3.25524)
scale = Vector2(0.795515, 0.795515)
texture = ExtResource("2_187sa")
region_enabled = true
region_rect = Rect2(-3.23762, -7.0171, 53.7196, 59.5129)

[node name="Marker2D" type="Marker2D" parent="sprite/pistola"]
position = Vector2(29.0173, -2.30062)
rotation = -4.60967e-05

[node name="GPUParticles2D" type="GPUParticles2D" parent="sprite/pistola/Marker2D"]
position = Vector2(1.90735e-06, 4.76837e-07)
rotation = 4.60967e-05
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_yxe1o")
texture = ExtResource("3_b77o7")
one_shot = true
explosiveness = 0.68

[node name="planta" type="AnimatedSprite2D" parent="sprite"]
position = Vector2(1.00001, 2)
scale = Vector2(1.33577, 1.33577)
sprite_frames = SubResource("SpriteFrames_u44gp")
animation = &"idle"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_gntk4")

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 1.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../sprite/pistola")
libraries = {
"": SubResource("AnimationLibrary_7gixn")
}
autoplay = "IDLE"
speed_scale = 0.673

[node name="anim_damage" type="Timer" parent="."]
wait_time = 0.2

[node name="shooting" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_nuyt8")
bus = &"bullets"

[node name="Atack_area" parent="." instance=ExtResource("3_flaww")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Atack_area"]
position = Vector2(329.864, 0)
shape = SubResource("RectangleShape2D_2bfsd")
debug_color = Color(0.769408, 0.401823, 0.515035, 0.42)

[node name="Marker2D" type="Marker2D" parent="Atack_area/CollisionShape2D"]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Shoot_Timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="anim_damage" to="." method="_on_anim_damage_timeout"]
